@@ -1,3 +1,9 @@
+2007-02-13  Akim Demaille  <demaille@gostai.com>
+
+	Mingw32 portability
+	* network.h (LIBPORT_FD_ISSET): New.
+	Use it.
+
 2007-02-12  Akim Demaille  <akim.demaille@free.fr>
 
 	Nicer debug traces
